# pylene-python-bindings

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO.md  conanfile.txt
folder/: morpho.cpp  morpho.hpp  my_disc.hpp  my_mask.hpp  my_rectangle.hpp
include/pln/core/: morpho.cpp  morpho.hpp  my_disc.hpp  my_mask.hpp  my_rectangle.hpp  pln_disc.hpp  pln_mask2d.hpp  pln_rect2d.hpp  se.cpp  se.hpp
src/: example.cpp  main.cpp  matrix.hpp  numpy_convert.hpp  numpy_convert.hxx  py_morpho.hpp  py_morpho.hxx  py_se.hpp  py_se.hxx  python_bindings.cpp  vector_to_init_list.hpp
tests/: requirements.txt  test.py  test_convert.py  test_example.py
